[package]
name = "mongolab"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
dotenv = "0.15.0"
log = "0.4.22"
log4rs = "1.3.0"
mongodb = "3.0.1"
tokio = "1.38.0"
serde = { version = "1.0.204", features = ["derive"] }
envy = "0.4.2"
chrono = "0.4.38"
uuid = {  version = "1.10.0", features = ["v4"] }
thiserror = "1.0.62"
